<resources>
    <string name="app_name">Locker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity">MainActivity</string>

    <string name="title_section1">Passcode</string>
    <string name="title_section2">Locker</string>
    <string name="title_section3">Section 3</string>
    <string name="enter_passcode">Enter Passcode</string>
    <string name="cancel">Cancel</string>
    <string name="key_description">Key</string>
    <string name="key0_text">0</string>
    <string name="key1_text">1</string>
    <string name="key2_text">2</string>
    <string name="key3_text">3</string>
    <string name="key4_text">4</string>
    <string name="key5_text">5</string>
    <string name="key6_text">6</string>
    <string name="key7_text">7</string>
    <string name="key8_text">8</string>
    <string name="key9_text">9</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_of_keys_entered">Number of keys entered</string>
    <string name="dim_layer">Dim layer</string>
    <string name="background">background</string>
    <string name="digital_clock">DigitalClock</string>
    <string name="slide_to_unlock_text"><![CDATA[> slide to unlock]]></string>

    <string name="default_passcode">2483</string>
    <string name="welcome">Welcome</string>
    <string name="notification_icon">Nitification icon</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="six_min_ago">6 min ago</string>
    <string name="gmail">Gmail</string>
    <string name="sample_date">Monday, July 29</string>
    <string name="border">border</string>
    <string name="slide_to_view">slide to view</string>
    <string name="switch_text">Switch</string>
    <string name="title_activity_change_wallpaper">Change wallpaper</string>
    <string name="wallpaper_preview">Wallpaper Preview</string>
    <string name="apply">Apply</string>
    <string name="apply_button">Apply button</string>
    <string name="battery_level">100 %</string>
    <string name="carrier_name">AT&amp;T</string>
    <string name="signal_level_indicator">Signal level indicator</string>
    <string name="battery_level_image">Battery level image</string>
    <string name="activity_meter_indicator">Activity Meter Indicator</string>
    <string name="wifi_indicator">wifi indicator</string>
    <string name="sample_time">10:45 AM</string>
    <string name="battery_charging_animation">Battery Charging Animation</string>
    <string name="statusbar_pull_bar">Status bar pull bar</string>
    <string name="control_center_pull_bar">Control center pull bar</string>
    <string name="control_center_phone">Control center phone</string>
    <string name="control_center_camera">Control center camera</string>
    <string name="toggle_button">Toggle button</string>
    <string name="data_LTE">LTE</string>
    <string name="data_3G">3G</string>
    <string name="data_2G">2G</string>
    <string name="label">Label</string>
    <string name="glass_background_image">Glass background image</string>
    <string name="glass_cover">Glass cover</string>
    <string name="low_brightness">Low Brightness</string>
    <string name="high_brightness">High Brightness</string>
    <string name="song_name">Stay</string>
    <string name="percentage_level">%d%%</string>

</resources>
