<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0100ff"
    tools:context="com.yorshahar.locker.fragment.PasscodeFragment">

    <TextView
        android:id="@+id/enterPasscodeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/circlesContainerView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/enter_passcode"
        android:textColor="#ffffffff"
        android:textSize="20sp" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key0"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignEnd="@+id/key8"
        android:layout_alignLeft="@+id/key8"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="false"
        android:layout_alignRight="@+id/key8"
        android:layout_alignStart="@+id/key8"
        android:layout_below="@+id/key8"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        app:value="@string/key0_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key1"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignTop="@+id/key2"
        android:layout_toLeftOf="@+id/key2"
        android:layout_toStartOf="@+id/key2"
        android:background="#00ffffff"
        android:contentDescription="@string/key_description"
        app:value="@string/key1_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key2"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_above="@+id/key5"
        android:layout_alignEnd="@+id/key5"
        android:layout_alignLeft="@+id/key5"
        android:layout_alignRight="@+id/key5"
        android:layout_alignStart="@+id/key5"
        android:layout_centerHorizontal="true"
        android:background="#00ffffff"
        android:contentDescription="@string/key_description"
        app:value="@string/key2_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key3"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignTop="@+id/key2"
        android:layout_toEndOf="@+id/key2"
        android:layout_toRightOf="@+id/key2"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key3_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key4"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignLeft="@+id/key1"
        android:layout_alignStart="@+id/key1"
        android:layout_alignTop="@+id/key5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key4_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key5"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_centerInParent="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key5_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key6"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignLeft="@+id/key3"
        android:layout_alignStart="@+id/key3"
        android:layout_alignTop="@+id/key5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key6_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key7"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignLeft="@+id/key1"
        android:layout_alignStart="@+id/key1"
        android:layout_alignTop="@+id/key8"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key7_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key8"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignEnd="@+id/key5"
        android:layout_alignLeft="@+id/key5"
        android:layout_alignRight="@+id/key5"
        android:layout_alignStart="@+id/key5"
        android:layout_below="@+id/key5"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key8_text" />

    <com.yorshahar.locker.ui.widget.Key
        android:id="@+id/key9"
        android:layout_width="95dp"
        android:layout_height="85dp"
        android:layout_alignLeft="@+id/key6"
        android:layout_alignStart="@+id/key6"
        android:layout_alignTop="@+id/key8"
        android:background="#00FFFFFF"
        android:contentDescription="@string/key_description"
        app:value="@string/key9_text" />

    <TextView
        android:id="@+id/cancelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/key9"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/key9"
        android:layout_marginBottom="20dp"
        android:padding="10sp"
        android:text="@string/cancel"
        android:textColor="#ffffffff"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/circlesContainerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/key2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:orientation="horizontal">

        <com.yorshahar.locker.ui.widget.FillableCircleView
            android:id="@+id/circle1ImageView"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp" />

        <com.yorshahar.locker.ui.widget.FillableCircleView
            android:id="@+id/circle2ImageView"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp" />

        <com.yorshahar.locker.ui.widget.FillableCircleView
            android:id="@+id/circle3ImageView"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp" />

        <com.yorshahar.locker.ui.widget.FillableCircleView
            android:id="@+id/circle4ImageView"
            android:layout_width="13dp"
            android:layout_height="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp" />

    </LinearLayout>


</RelativeLayout>
