<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1b0eff"
    tools:context="com.yorshahar.locker.fragment.LockerFragment">

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="9:38"
        android:textColor="#ffffffff"
        android:textSize="90sp"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:focusableInTouchMode="true"
        android:text="@string/sample_date"
        android:textColor="#ffffffff"
        android:textSize="19sp" />

    <com.yorshahar.locker.ui.widget.ShinyTextView
        android:id="@+id/unlockTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:focusableInTouchMode="true"
        android:text="@string/slide_to_unlock_text"
        android:textColor="#FFFFFFFF"
        android:textSize="24sp" />

    <ListView
        android:id="@+id/notificationsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/unlockTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dateTextView"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"
        android:divider="#6a6376"
        android:dividerHeight="1sp"
        android:fadingEdgeLength="0dp"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:overScrollFooter="#00000000"
        android:overScrollHeader="#00000000"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:layout_marginLeft="15dp" />

    <ImageView
        android:id="@+id/phoneImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="-5dp"
        android:contentDescription="@string/control_center_phone"
        android:src="@android:drawable/ic_menu_call" />

    <ImageView
        android:id="@+id/cameraImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-5dp"
        android:contentDescription="@string/control_center_camera"
        android:src="@android:drawable/ic_menu_camera" />

</RelativeLayout>
